--- a/cluster/cube-refresh-worker-deployment.yaml
+++ b/cluster/cube-refresh-worker-deployment.yaml
@@ -19,27 +19,27 @@ spec:
       containers:
         - env: # Refer to https://cube.dev/docs/reference/environment-variables for more options
             - name: CUBEJS_API_SECRET
-              value: 55519f7e-3f0c-4340-9fde-37a84835b144
+              value: "55519f7e-3f0c-4340-9fde-37a84835b144"
             - name: CUBEJS_CUBESTORE_HOST
               value: "cubestore-router" # USING THIS CUBESTORE HOST BECAUSE THE CUBESTORE ROUTER SERVICE IS NAMED "CUBESTORE-ROUTER"
             - name: CUBEJS_DB_HOST
-              value: host.docker.internal
+              value: "host.docker.internal"
             - name: CUBEJS_DB_PORT
-              value: 8123
+              value: "8123"
             - name: CUBEJS_DB_NAME
-              value: users  
+              value: "users" 
             - name: CUBEJS_DB_USER
               value: ""
             - name: CUBEJS_DB_PASS
               value: ""               
             - name: CUBEJS_DB_TYPE
-              value: clickhouse
+              value: "clickhouse"
             - name: CUBEJS_DB_SSL
-              value: false
+              value: "false"
             - name: CUBEJS_DB_SSL
-              value: false
+              value: "false"
             - name: CUBEJS_WEB_SOCKETS
-              value: false
+              value: "false"
             - name: CUBEJS_DEV_MODE
               value: "true" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
