--- a/cluster/cube-api-schema-configmap.yaml
+++ b/cluster/cube-api-schema-configmap.yaml
@@ -3,42 +3,345 @@ kind: ConfigMap
 metadata:
   name: cube-api-schema
 data:
-  # Here's where you define the schema files  
-  Orders.js: |
-    cube(`Orders`, {
-      sql: `SELECT * FROM users.orders ${
-        SECURITY_CONTEXT.role.unsafeValue() !== "admin"
-          ? "WHERE id % 10 = CAST(FLOOR(RAND() * 10) AS UInt32)"
-          : ""
-    }`,    
-    
-      joins: {},
-    
+  # Here's where you define the schema files
+  Users.js: |
+    cube(`Users`, {
+      sql: `SELECT * FROM public.users`,
+      
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started  
+      },
+      
+      joins: {
+        
+      },
+      
       measures: {
         count: {
           type: `count`,
-          drillMembers: [id],
-        },
-        amount: {
-          sql: `amount`,
-          type: `sum`,
-        },
-      },    
+          drillMembers: [id, city, firstName, lastName, createdAt]
+        }
+      },
+      
       dimensions: {
         id: {
           sql: `id`,
           type: `number`,
-          primaryKey: true,
+          primaryKey: true
+        },
+        
+        city: {
+          sql: `city`,
+          type: `string`
+        },
+        
+        company: {
+          sql: `company`,
+          type: `string`
+        },
+        
+        gender: {
+          sql: `gender`,
+          type: `string`
+        },
+        
+        firstName: {
+          sql: `first_name`,
+          type: `string`
+        },
+        
+        lastName: {
+          sql: `last_name`,
+          type: `string`
+        },
+        
+        state: {
+          sql: `state`,
+          type: `string`
+        },
+        
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
+        }
+      },
+      
+      dataSource: `default`
+    });
+  
+  Products.js: |
+    cube(`Products`, {
+      sql: `SELECT * FROM public.products`,
+      
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started  
+      },
+      
+      joins: {
+        Suppliers: {
+          sql: `${CUBE}.supplier_id = ${Suppliers}.id`,
+          relationship: `belongsTo`
+        },
+        
+        ProductCategories: {
+          sql: `${CUBE}.product_category_id = ${ProductCategories}.id`,
+          relationship: `belongsTo`
+        }
+      },
+      
+      measures: {
+        count: {
+          type: `count`,
+          drillMembers: [id, name, createdAt]
+        }
+      },
+      
+      dimensions: {
+        id: {
+          sql: `id`,
+          type: `number`,
+          primaryKey: true
+        },
+        
+        name: {
+          sql: `name`,
+          type: `string`
+        },
+        
+        description: {
+          sql: `description`,
+          type: `string`
+        },
+        
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
+        }
+      },
+      
+      dataSource: `default`
+    });
+  
+  LineItems.js: |
+    cube(`LineItems`, {
+      sql: `SELECT * FROM public.line_items`,
+      
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started  
+      },
+      
+      joins: {
+        Products: {
+          sql: `${CUBE}.product_id = ${Products}.id`,
+          relationship: `belongsTo`
+        },
+        
+        Orders: {
+          sql: `${CUBE}.order_id = ${Orders}.id`,
+          relationship: `belongsTo`
+        }
+      },
+      
+      measures: {
+        count: {
+          type: `count`,
+          drillMembers: [id, createdAt]
+        },
+        
+        quantity: {
+          sql: `quantity`,
+          type: `sum`
+        },
+        
+        price: {
+          sql: `price`,
+          type: `sum`
+        }
+      },
+      
+      dimensions: {
+        id: {
+          sql: `id`,
+          type: `number`,
+          primaryKey: true
+        },
+        
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
+        }
+      },
+      
+      dataSource: `default`
+    });
+  
+  Suppliers.js: |
+    cube(`Suppliers`, {
+      sql: `SELECT * FROM public.suppliers`,
+      
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started  
+      },
+      
+      joins: {
+        
+      },
+      
+      measures: {
+        count: {
+          type: `count`,
+          drillMembers: [id, createdAt]
+        }
+      },
+      
+      dimensions: {
+        id: {
+          sql: `id`,
+          type: `number`,
+          primaryKey: true
+        },
+        
+        address: {
+          sql: `address`,
+          type: `string`
+        },
+        
+        email: {
+          sql: `email`,
+          type: `string`
+        },
+        
+        company: {
+          sql: `company`,
+          type: `string`
+        },
+        
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
+        }
+      },
+      
+      dataSource: `default`
+    });
+  
+  ProductCategories.js: |
+    cube(`ProductCategories`, {
+      sql: `SELECT * FROM public.product_categories`,
+      
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started  
+      },
+      
+      joins: {
+        
+      },
+      
+      measures: {
+        count: {
+          type: `count`,
+          drillMembers: [id, name, createdAt]
+        }
+      },
+      
+      dimensions: {
+        id: {
+          sql: `id`,
+          type: `number`,
+          primaryKey: true
+        },
+        
+        name: {
+          sql: `name`,
+          type: `string`
+        },
+        
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
+        }
+      },
+      
+      dataSource: `default`
+    });
+  
+  Orders.js: |
+    cube(`Orders`, {
+      sql: `SELECT * FROM public.orders`,
+      preAggregations: {
+        // Pre-Aggregations definitions go here
+        // Learn more here: https://cube.dev/docs/caching/pre-aggregations/getting-started
+    
+        main: {
+          measures: [CUBE.count],
+          dimensions: [CUBE.status],
+          timeDimension: CUBE.createdAt,
+          granularity: `day`,
+          partitionGranularity: `month`,
+          refreshKey: {
+            every: `1 minute`,
+            incremental: true,
+            updateWindow: `3 day`,
+          },
+          buildRangeEnd: {
+            sql: `SELECT NOW()`,
+          }
+        },
+
+        second: {
+          measures: [CUBE.count],
+          dimensions: [CUBE.status],
+          timeDimension: CUBE.completedAt,
+          granularity: `day`,
+          partitionGranularity: `month`,
+          refreshKey: {
+            every: `1 minute`,
+          },
+        },
+      },
+      joins: {
+        Users: {
+          sql: `${CUBE}.user_id = ${Users}.id`,
+          relationship: `belongsTo`
+        },
+        Products: {
+          sql: `${CUBE}.product_id = ${Products}.id`,
+          relationship: `belongsTo`
+        }
+      },
+      measures: {
+        count: {
+          type: `count`,
+          drillMembers: [id, createdAt]
+        },
+        number: {
+          sql: `number`,
+          type: `sum`
+        }
+      },
+      dimensions: {
+        id: {
+          sql: `id`,
+          type: `number`,
+          primaryKey: true
         },
         status: {
           sql: `status`,
-          type: `string`,
+          type: `string`
+        },
+        createdAt: {
+          sql: `created_at`,
+          type: `time`
         },
         completedAt: {
           sql: `completed_at`,
-          type: `time`,
-        },
+          type: `time`
+        }
       },
-      dataSource: `default`,
+      dataSource: `default`
     });
-    
