--- a/cluster/cube-refresh-worker-deployment.yaml
+++ b/cluster/cube-refresh-worker-deployment.yaml
@@ -19,27 +19,21 @@ spec:
       containers:
         - env: # Refer to https://cube.dev/docs/reference/environment-variables for more options
             - name: CUBEJS_API_SECRET
-              value: "55519f7e-3f0c-4340-9fde-37a84835b144"
+              value: <API_SECRET>
             - name: CUBEJS_CUBESTORE_HOST
               value: "cubestore-router" # USING THIS CUBESTORE HOST BECAUSE THE CUBESTORE ROUTER SERVICE IS NAMED "CUBESTORE-ROUTER"
             - name: CUBEJS_DB_HOST
-              value: "host.docker.internal"
-            - name: CUBEJS_DB_PORT
-              value: "8123"
+              value: <DB_HOST>
             - name: CUBEJS_DB_NAME
-              value: "users" 
+              value: <DB_NAME>
             - name: CUBEJS_DB_USER
-              value: ""
+              value: <DB_USER>
             - name: CUBEJS_DB_PASS
-              value: ""               
+              value: <DB_PASSWORD>
             - name: CUBEJS_DB_TYPE
-              value: "clickhouse"
-            - name: CUBEJS_DB_SSL
-              value: "false"          
-            - name: CUBEJS_WEB_SOCKETS
-              value: "false"
+              value: <DB_TYPE>
             - name: CUBEJS_DEV_MODE
-              value: "true" # NEVER RUN DEV MODE IN K8S
+              value: "false" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
               value: "true"
             - name: CUBEJS_REDIS_URL
