--- a/cluster/cube-api-deployment.yaml
+++ b/cluster/cube-api-deployment.yaml
@@ -23,15 +23,17 @@ spec:
             - name: CUBEJS_CUBESTORE_HOST
               value: "cubestore-router" # USING THIS CUBESTORE HOST BECAUSE THE CUBESTORE ROUTER SERVICE IS NAMED "CUBESTORE-ROUTER"
             - name: CUBEJS_DB_HOST
-              value: <DB_HOST>
+              value: "host.docker.internal"
+            - name: CUBEJS_DB_PORT
+              value: "8123"  
             - name: CUBEJS_DB_NAME
-              value: <DB_NAME>
+              value: "users"
             - name: CUBEJS_DB_USER
               value: <DB_USER>
             - name: CUBEJS_DB_PASS
               value: <DB_PASSWORD>
             - name: CUBEJS_DB_TYPE
-              value: <DB_TYPE>
+              value: "clickhouse"
             - name: CUBEJS_DEV_MODE
               value: "true" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
