--- a/cluster/cube-refresh-worker-deployment.yaml
+++ b/cluster/cube-refresh-worker-deployment.yaml
@@ -23,19 +23,17 @@ spec:
             - name: CUBEJS_CUBESTORE_HOST
               value: "cubestore-router" # USING THIS CUBESTORE HOST BECAUSE THE CUBESTORE ROUTER SERVICE IS NAMED "CUBESTORE-ROUTER"
             - name: CUBEJS_DB_HOST
-              value: "host.docker.internal"
-            - name: CUBEJS_DB_PORT
-              value: "8123"  
+              value: <DB_HOST>
             - name: CUBEJS_DB_NAME
-              value: "users"
+              value: <DB_NAME>
             - name: CUBEJS_DB_USER
-              value: ""
+              value: <DB_USER>
             - name: CUBEJS_DB_PASS
-              value: ""
+              value: <DB_PASSWORD>
             - name: CUBEJS_DB_TYPE
-              value: "clickhouse"
+              value: <DB_TYPE>
             - name: CUBEJS_DEV_MODE
-              value: "true" # NEVER RUN DEV MODE IN K8S
+              value: "false" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
               value: "true"
             - name: CUBEJS_REDIS_URL
