--- a/cluster/cube-api-deployment.yaml
+++ b/cluster/cube-api-deployment.yaml
@@ -38,8 +38,10 @@ spec:
               value: "true" # NEVER RUN DEV MODE IN K8S
             - name: CUBEJS_EXTERNAL_DEFAULT
               value: "true"
-            - name: CUBEJS_REDIS_URL
-              value: redis://redis:6379 # USING THIS REDIS URL BECAUSE THE REDIS SERVICE IS NAMED "REDIS"
+            - name: CUBEJS_CACHE_AND_QUEUE_DRIVER
+              value: "memory"
+            #- name: CUBEJS_REDIS_URL
+            #  value: redis://redis:6379 # USING THIS REDIS URL BECAUSE THE REDIS SERVICE IS NAMED "REDIS"
           image: cubejs/cube:v0.28.14
           name: cube-api
           ports:
