--- a/cluster/cube-api-deployment.yaml
+++ b/cluster/cube-api-deployment.yaml
@@ -42,7 +42,7 @@ spec:
               value: "memory"
             #- name: CUBEJS_REDIS_URL
             #  value: redis://redis:6379 # USING THIS REDIS URL BECAUSE THE REDIS SERVICE IS NAMED "REDIS"
-          image: cubejs/cube:v0.28.14
+          image: mycube:latest
           name: cube-api
           ports:
             - containerPort: 3000
