--- a/cluster/cube-refresh-worker-deployment.yaml
+++ b/cluster/cube-refresh-worker-deployment.yaml
@@ -46,6 +46,7 @@ spec:
             - name: CUBEJS_REFRESH_WORKER
               value: "true"
           image: mycube:latest
+          imagePullPolicy: Never
           name: cube-refresh-worker
           resources: {}
           volumeMounts:
