--- a/cluster/cube-api-deployment.yaml
+++ b/cluster/cube-api-deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - name: CUBEJS_CACHE_AND_QUEUE_DRIVER
               value: "memory"
             - name: CUBEJS_SCHEMA_PATH
-              value: "schema"
+              value: "cube/conf/schema"
             #- name: CUBEJS_REDIS_URL
             #  value: redis://redis:6379 # USING THIS REDIS URL BECAUSE THE REDIS SERVICE IS NAMED "REDIS"
           image: mycube:test3
